feat(category): Implementa a lógica principal do DefaultUpdateCategoryUseCase
Finaliza a implementação do `DefaultUpdateCategoryUseCase`, corrigindo os erros lógicos anteriores e orquestrando o fluxo de atualização de categorias.

- Utiliza o método `update()` da entidade `Category` para aplicar as mudanças.
- Chama o método `update()` do `CategoryGateway` para persistir as alterações.
- Garante o retorno do `UpdateCategoryOutput` correto.
- Ajusta o método `notFound` para usar `String.format()` para compatibilidade com versões de Java configuradas no build.